--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
   var computerChoice=generateComputerChoice();
   var resultMsg=getResult('Bat',computerChoice);
   showResult('Bat',computerChoice,resultMsg);
-  "><img src="Images1/bat.png" alt="Bat Image" class="choice-image"></button>
+  "><img src="bat.png" alt="Bat Image" class="choice-image"></button>
   
 
 <button class="choice-button" onclick="
 var computerChoice=generateComputerChoice();
  var resultMsg=getResult('Ball',computerChoice);
  showResult('Ball',computerChoice,resultMsg);
-"><img src="Images1/ball.png" alt="Ball Image" class="choice-image">
+"><img src="ball.png" alt="Ball Image" class="choice-image">
 </button>
  
 <button class="choice-button" onclick="
  var computerChoice=generateComputerChoice();
   var resultMsg=getResult('Stump',computerChoice);
   showResult('Stump',computerChoice,resultMsg);
-"><img src="Images1/stump.png" alt="Stump Image" class="choice-image">
+"><img src="stump.png" alt="Stump Image" class="choice-image">
 </button> 
 
 
